Fixed Input Overlapping With Banner

--- a/client/src/app/pages/products/products.component.scss
+++ b/client/src/app/pages/products/products.component.scss
@@ -57,7 +57,7 @@
 
 @media ( max-width: 800px ) {
     .products .container {
-        padding: 144px 40px 24px 104px;
+        padding: 168px 40px 24px 104px;
     }
     
     .products .container .input-container {
